Add '26.1-rc-3' sources